--- a/FUNDING.yml
+++ b/FUNDING.yml
@@ -1,4 +1,4 @@
 # These are supported funding model platforms
 
-github: ["KennedyProject", "FeriEXP"]
-custom: ["https://t.me/kenbotsupport"]
+github: ["xmoodseum", "FeriEXP"]
+custom: ["https://t.me/eyyocmr"]
