--- a/FUNDING.yml
+++ b/FUNDING.yml
@@ -1,4 +1,4 @@
 # These are supported funding model platforms
 
-github: ["xmoodseum", "FeriEXP"]
+github: ["pingithub666", "FeriEXP"]
 custom: ["https://t.me/eyyocmr"]
